# docs

./: .gitignore  Dockerfile  docker-compose.dev.yml  pyproject.toml
.github/workflows/: deploy-server.yml
pdfding/core/settings/: base.py
pdfding/pdf/: urls.py
pdfding/pdf/services/: docling_services.py
pdfding/pdf/templates/: docling_result.html  pdf_details.html
pdfding/pdf/templates/includes/: pdf_details_sidebar.html  sidebar.html
pdfding/pdf/templates/includes/pdf_overview/: compact_pdf.html  minimal_pdf.html  overview_page.html  pdf_actions_menu.html  spacious_pdf.html
pdfding/pdf/templates/partials/: docling_status.html
pdfding/pdf/views/: docling_views.py
